--- a/booking.html
+++ b/booking.html
@@ -9,6 +9,7 @@
 </head>
 <body>
    <div class="container">
+      
       <nav class="top-nav">
          <svg class="menu icon" height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
          <div></div>
@@ -18,23 +19,62 @@
                   v0.1h-10.8V0h-10.8v0.1H93.3V0H81.8v0.1H66.6c0,0,0,0,0-0.1H56.2v0.1H45.3V0H34.5v0.1H15.9L0,65.8L27.9,78l22.2,133h143.8 l22.3-133.4l27.2-11.9l-16-65.7H214.7z M181,191.6H63l-3.7-21.4h125.3L181,191.6z M193,117.8H51l-9.3-53.5
                   C59,86,88.5,100.2,122,100.2s63-14.2,80.3-35.8L193,117.8z M122,81.7c-44.1,0-80.4-27.2-85.1-62.3h170.2 C202.4,54.5,166.1,81.7,122,81.7L122,81.7z"/>
                </g> </g> </svg></a>
-         <a href="#"><svg class="account icon" height="20px" version="1.1" viewBox="0 0 20 20" width="20px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1"><g id="Core" transform="translate(-86.000000, -2.000000)"><g id="account-circle" transform="translate(86.000000, 2.000000)"><path d="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,3 C11.7,3 13,4.3 13,6 C13,7.7 11.7,9 10,9 C8.3,9 7,7.7 7,6 C7,4.3 8.3,3 10,3 L10,3 Z M10,17.2 C7.5,17.2 5.3,15.9 4,14 C4,12 8,10.9 10,10.9 C12,10.9 16,12 16,14 C14.7,15.9 12.5,17.2 10,17.2 L10,17.2 Z" id="Shape"/></g></g></g></svg></a>
+         <a href="#"><svg class="account icon" height="20px" version="1.1" viewBox="0 0 20 20" width="20px" xmlns="http://www.w3.org/2000/svg"  xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1"><g id="Core" transform="translate(-86.000000, -2.000000)"><g id="account-circle" transform="translate(86.000000, 2.000000)"><path d="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,3 C11.7,3 13,4.3 13,6 C13,7.7 11.7,9 10,9 C8.3,9 7,7.7 7,6 C7,4.3 8.3,3 10,3 L10,3 Z M10,17.2 C7.5,17.2 5.3,15.9 4,14 C4,12 8,10.9 10,10.9 C12,10.9 16,12 16,14 C14.7,15.9 12.5,17.2 10,17.2 L10,17.2 Z" id="Shape"/></g></g></g></svg></a>
       </nav>
+
+      <main class="main">
       <section class="hero-section dropshadow">
          <div class="hero wrapper">
             <h1>Book a table</h1>
-            <a href="menu.html"><div class="button view-menu">View Menu</div></a>
-         </div>
-      </section>
-      <section class="booking-section">
-         <div class="booking wrapper">
-            <form class="form">
-               <h1>Book a Table</h1>
-            </form>
-            <div class="aside"><img src="images/500_F_272702026_9g6wjKIuDW9IRttiuME9rO4U9lfSwfTw.jpg" alt="Ramen"/></div>
          </div>
       </section>
 
+      <section class="booking-section">
+         <div class="booking wrapper">
+            <section class="form-section">
+               <h2>Book a Table</h2>
+               <p>A confirmation will be sent to your email address.</p>
+               <form class="form" id="booking-form">
+                  <div class="left">
+                     <label>
+                        Full Name
+                        <input class="info-form" type="text" name="customer" required>
+                     </label>
+                     <label>
+                        Email Address
+                        <input class="info-form" type="email" name="email" required>
+                     </label>
+                     <label>
+                        Contact Number
+                        <input class="info-form" type="text" name="contact" required>
+                     </label>
+                     <label>
+                        Special Requests
+                        <textarea class="info-form" rows="4" cols="40" name="requests" form="booking-form"></textarea>
+                     </label>
+                  </div>
+                  <div class="right">
+                     <label>
+                        No. of Guests
+                        <input class="info-form" type="number" name="guests" required>
+                     </label>
+                     <label>
+                        Date
+                        <input class="info-form" type="date" name="date" required>
+                     </label>
+                     <label>
+                        Time
+                        <input class="info-form" type="time" name="time" min="11:00" max="22:00" required>
+                     </label>
+                     <button class="button book-button" type="submit">Book Table</button>
+                  </div>
+               </form>
+            </section>
+            <aside class="aside"><img class="side-pic" src="images/500_F_272702026_9g6wjKIuDW9IRttiuME9rO4U9lfSwfTw.jpg" alt="Ramen"/></aside>
+         </div>
+      </section>
+
+   </main>
 
       <footer class="footer">
          <div class="contact">
@@ -83,5 +123,6 @@
                  C606.6,161.3,587.4,142.1,563.6,141.9"/></g></svg></a>
          </div>
       </footer>
+   </div>
 </body>
 </html>
