--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,8 @@
                </g> </g> </svg></a>
          <a href="#"><svg class="account icon" height="20px" version="1.1" viewBox="0 0 20 20" width="20px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1"><g id="Core" transform="translate(-86.000000, -2.000000)"><g id="account-circle" transform="translate(86.000000, 2.000000)"><path d="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,3 C11.7,3 13,4.3 13,6 C13,7.7 11.7,9 10,9 C8.3,9 7,7.7 7,6 C7,4.3 8.3,3 10,3 L10,3 Z M10,17.2 C7.5,17.2 5.3,15.9 4,14 C4,12 8,10.9 10,10.9 C12,10.9 16,12 16,14 C14.7,15.9 12.5,17.2 10,17.2 L10,17.2 Z" id="Shape"/></g></g></g></svg></a>
       </nav>
+
+      <main class="main">
       <section class="hero-section dropshadow">
          <div class="hero wrapper">
             <h1>TwoStix Menu</h1>
@@ -34,7 +36,7 @@
                <li><a href="#sides"><h2>Sides</h2></a></li>
             </ol>
          </nav>
-         <hr>
+         </hr>
          <section class="food-section">
             <div class="food wrapper">
                <h2 id="starters" class="title">Starters</h2>
@@ -45,8 +47,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -55,8 +59,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -65,8 +71,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -75,8 +83,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -85,8 +95,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -95,12 +107,15 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                </section>
-            <hr>
+            </hr>
+
                <h2 id="mains" class="title">Mains</h2>
                <section class="mains">
                   <div class="mealcard">
@@ -109,8 +124,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -119,8 +136,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -129,8 +148,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -139,8 +160,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -149,8 +172,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -159,8 +184,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -169,8 +196,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -179,22 +208,26 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                </section>
             <hr>
                <h2 id="sides" class="title">Sides</h2>
-               <section  class="sides">
+               <section  class="sides"> 
                   <div class="mealcard">
                      <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
@@ -203,18 +236,10 @@
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
                      <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
-                     <button class="add">+</button>
-                  </div>
-                  <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                           viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
-                              c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
-                              c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
-                     <img class="dish" src="images/500_F_247339271_bP7T6NSDpqmbhqCKM4x6Syies8NVMUgo.jpg" alt="Ramen"/>
-                     <h4 class="name">Pork Ramen</h4>
-                     <span class="price">£11.99</span>
+                     <div class="info">  
+                        <h4 class="name">Pork Ramen</h4>
+                        <span class="price">£11.99</span>
+                     </div>   
                      <button class="add">+</button>
                   </div>
                </section>
@@ -224,6 +249,7 @@
             <a href="booking.html"><div class="button book-table">Book a table</div></a>
          </div>
       </section>     
+      </main>
 
       <footer class="footer">
          <div class="contact">
