Added dropdrown, background, video, phone menu fixed.

--- a/booking.html
+++ b/booking.html
@@ -11,8 +11,13 @@
    <div class="container">
       
       <nav class="top-nav">
-         <svg class="menu icon" height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
-         <div></div>
+         <div class="dropmenu">
+            <svg class="menu icon" height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
+            <ol class="dropdown">
+               <li><a href="menu.html">Menu</a></li>
+               <li><a href="booking.html">Book Table</a></li>
+            </ol>
+         </div>         <div></div>
          <a href="index.html"><img class="logo" src="images/icons/logo-col.svg" alt="Logo"/></a>
          <a href="#"><svg class="basket icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                viewBox="0 0 243.3 211" style="enable-background:new 0 0 243.3 211;" xml:space="preserve"> <g id="Layer_2_1_"> <g id="Layer_1-2"> <path class="st0" d="M214.7,0.1L214.7,0.1L203.3,0v0.1h-11.1V0h-10.8v0.1h-10.8c0,0,0,0,0-0.1h-10.4v0.1h-23.7c0,0,0,0,0-0.1H126
@@ -70,7 +75,15 @@
                   </div>
                </form>
             </section>
-            <aside class="aside"><img class="side-pic" src="images/500_F_272702026_9g6wjKIuDW9IRttiuME9rO4U9lfSwfTw.jpg" alt="Ramen"/></aside>
+
+            <aside class="aside">
+               <video loop autoplay muted width="250px">
+                  <source src="images/aside_1.mp4" type="video/mp4">
+                  <p>Your browser does not support awesome ramen vidoes.</p>
+               </video>
+            </aside>
+            
+            <!-- <aside class="aside"><img class="side-pic" src="images/500_F_272702026_9g6wjKIuDW9IRttiuME9rO4U9lfSwfTw.jpg" alt="Ramen"/></aside> -->
          </div>
       </section>
 
@@ -86,7 +99,7 @@
             </ul>
          </div>
          <div class="socials">
-            <a href="#"><svg class="twitter icon" version="1.1" id="aa26e0be-9258-4431-8251-1228b9aad27b"
+            <a href="https://twitter.com/" target="_blank"><svg class="twitter icon" version="1.1" id="aa26e0be-9258-4431-8251-1228b9aad27b"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 750"
                   style="enable-background:new 0 0 750 750;" xml:space="preserve">
                <path id="a6d1175e-77c9-496c-afd2-62b5f211431b" class="st0" d="M242.7,667.7c272.7,0,421-224.4,421-421v-20.1
@@ -96,12 +109,12 @@
                   c-13.1,3.5-26.6,4.9-40.1,4c-9.5,0.6-19.1-0.7-28.1-4c20.1,60.9,76.2,102.6,140.3,104.2c-52.7,41.2-117.5,63.7-184.4,64.1
                   c-12.2,0.7-24.4-0.6-36.1-3.9C80.6,643.6,160.8,668.9,242.7,667.7"/>
             </svg></a>
-            <a href="#"><svg class="fb icon" version="1.1" id="addad26c-c76f-4459-b531-8d2782d63202"
+            <a href="https://www.facebook.com/" target="_blank"><svg class="fb icon" version="1.1" id="addad26c-c76f-4459-b531-8d2782d63202"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 750"
                   style="enable-background:new 0 0 750 750;" xml:space="preserve">
                   <path id="fa3a6b04-de12-4b8c-b3fa-3825c59e9db7" class="st0" d="M431.5,737.9V407.2h112.9l16.1-129h-129v-80.6
                   c0-36.3,12.1-64.5,64.5-64.5h68.5v-117c-16.1,0-56.4-4-100.7-4c-96.8,0-165.3,60.5-165.3,169.3v96.7H185.5v129h112.9v330.6H431.5z"/></svg></a>
-            <a href="#"><svg class="instagram icon" version="1.1" id="a1a6db26-22e8-42d8-9ccb-d7b510e769d5"
+            <a href="https://www.instagram.com/" target="_blank"><svg class="instagram icon" version="1.1" id="a1a6db26-22e8-42d8-9ccb-d7b510e769d5"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 750"
                   style="enable-background:new 0 0 750 750;" xml:space="preserve">
                   <g id="b9ded027-e2a6-4498-812d-4b54eb991fd0">
