--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
          <div class="dropmenu">
             <svg class="menu icon" height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
             <ol class="dropdown">
-               <li>Menu</li>
-               <li>Book Table</li>
+               <li><a href="menu.html">Menu</a></li>
+               <li><a href="booking.html">Book Table</a></li>
             </ol>
          </div>
 
@@ -32,7 +32,7 @@
       <main class="main">
          <section class="hero-section dropshadow">
             <div class="hero wrapper">
-               <h1>Welcome to TwoStix Ramen Bar</h1>
+               <h1>TwoStix Ramen Bar</h1>
                <h2>Specialists in authentic tonkotsu ramen</h2>
                <a href="menu.html"><div class="button view-menu">View Menu</div></a>
                <a href="booking.html"><div class="button book-table">Book Table</div></a>
@@ -42,7 +42,8 @@
          <section class="testimonial-section">
             <div class="testimonial wrapper">
                <img class="icon" src="images/icons/quote.png" alt="Quotemark"/>
-               <p>Our Hakata tonkotsu ramen recipe has been specially created by Executive Chef Kanji Furukawa who was born and raised in Hakata. His recipe provides the UK with highly crafted, genuine tonkotsu rarely found outside of Japan. Perfection comes from our special blend of noodles, umami rich soup and toppings.</p>
+               <p>Our Hakata tonkotsu ramen recipe has been specially created by Executive Chef Kanji Furukawa who was born and raised in Hakata. </p>
+               <p>His recipe provides the UK with highly crafted, genuine tonkotsu rarely found outside of Japan. Perfection comes from our special blend of noodles, umami rich soup and toppings.</p>
             </div>
          </section>
 
@@ -77,7 +78,7 @@
             </ul>
          </div>
          <div class="socials">
-            <a href="#"><svg class="twitter icon" version="1.1" id="aa26e0be-9258-4431-8251-1228b9aad27b"
+            <a href="https://twitter.com/" target="_blank"><svg class="twitter icon" version="1.1" id="aa26e0be-9258-4431-8251-1228b9aad27b"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 750"
                   style="enable-background:new 0 0 750 750;" xml:space="preserve">
                <path id="a6d1175e-77c9-496c-afd2-62b5f211431b" class="st0" d="M242.7,667.7c272.7,0,421-224.4,421-421v-20.1
@@ -87,12 +88,12 @@
                   c-13.1,3.5-26.6,4.9-40.1,4c-9.5,0.6-19.1-0.7-28.1-4c20.1,60.9,76.2,102.6,140.3,104.2c-52.7,41.2-117.5,63.7-184.4,64.1
                   c-12.2,0.7-24.4-0.6-36.1-3.9C80.6,643.6,160.8,668.9,242.7,667.7"/>
             </svg></a>
-            <a href="#"><svg class="fb icon" version="1.1" id="addad26c-c76f-4459-b531-8d2782d63202"
+            <a href="https://www.facebook.com/" target="_blank"><svg class="fb icon" version="1.1" id="addad26c-c76f-4459-b531-8d2782d63202"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 750"
                   style="enable-background:new 0 0 750 750;" xml:space="preserve">
                   <path id="fa3a6b04-de12-4b8c-b3fa-3825c59e9db7" class="st0" d="M431.5,737.9V407.2h112.9l16.1-129h-129v-80.6
                   c0-36.3,12.1-64.5,64.5-64.5h68.5v-117c-16.1,0-56.4-4-100.7-4c-96.8,0-165.3,60.5-165.3,169.3v96.7H185.5v129h112.9v330.6H431.5z"/></svg></a>
-            <a href="#"><svg class="instagram icon" version="1.1" id="a1a6db26-22e8-42d8-9ccb-d7b510e769d5"
+            <a href="https://www.instagram.com/" target="_blank"><svg class="instagram icon" version="1.1" id="a1a6db26-22e8-42d8-9ccb-d7b510e769d5"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 750"
                   style="enable-background:new 0 0 750 750;" xml:space="preserve">
                   <g id="b9ded027-e2a6-4498-812d-4b54eb991fd0">
